<resources>
    <string name="app_name">Mokaminter</string>
    <string name="version">Version 1.1 (October 27, 2025)</string>
    <string name="author">Author: fausto.spoto@mokamint.io</string>
    <string name="nav_header_title">Mokaminter</string>
    <string name="nav_header_subtitle">The mobile miner for Mokamint</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="miners">Miners</string>
    <string name="settings">Settings</string>
    <string name="add_miner">Add miner</string>
    <string name="deleted_miner">Deleted miner %1$s</string>
    <string name="added_miner">Added miner %1$s</string>
    <string name="operation_timeout">The operation timed out!</string>
    <string name="action_delete_miner">Delete</string>
    <string name="action_delete_miner_tooltip">Deletes this miner from the list of miners.</string>
    <string name="delete_miner_question">Delete miner?</string>
    <string name="delete_miner_confirmation_message">Do you really want to delete miner %1$s?</string>
    <string name="dismiss">Dismiss</string>
    <string name="delete">Delete</string>
    <string name="create">Create</string>
    <string name="turnOff">Turn off</string>
    <string name="action_reload_balances">Reload balances</string>
    <string name="action_reload_miners_tooltip">Reloads the miners\' information.</string>
    <string name="action_add_miner">Add miner</string>
    <string name="action_add_miner_tooltip">Adds a new miner for a mining endpoint.</string>
    <string name="added_miner_uri_default">ws://panarea.hotmoka.io:8025</string>
    <string name="add_miner_heading">"Specify the mining endpoint URI, the plot size and the public key that will identify the new miner in blockchain."</string>
    <string name="create_key">Create key</string>
    <string name="use_existing_key">Use existing key</string>
    <string name="words_warning">The mnemonic phrase and password below are the key pair from which the new public key is derived. Save them on paper now: they are needed to import the key pair in another app and to control the coins that will be earned by the new miner. Lost mnemonic or password cannot be recovered.</string>
    <string name="word1">word 1</string>
    <string name="word2">word 2</string>
    <string name="word3">word 3</string>
    <string name="word4">word 4</string>
    <string name="word5">word 5</string>
    <string name="word6">word 6</string>
    <string name="word7">word 7</string>
    <string name="word8">word 8</string>
    <string name="word9">word 9</string>
    <string name="word10">word 10</string>
    <string name="word11">word 11</string>
    <string name="word12">word 12</string>
    <string name="add_miner_size_hint">plot size (number of nonces)</string>
    <string name="add_miner_uri_hint">URI of the mining endpoint</string>
    <string name="add_miner_password_hint">Key pair\'s password</string>
    <string name="miner_card_name">%1$s (%2$s)</string>
    <string name="miner_card_public_key">public key: %1$s (%2$s)</string>
    <string name="miner_card_plot_size">plot size: %1$s</string>
    <string name="miner_card_plot_size_in_progress">plot size: %1$d/%2$s</string>
    <string name="miner_card_uri">URI: %1$s</string>
    <string name="add_miner_message_specify_positive_plot_size">A positive plot size must be specified</string>
    <string name="add_miner_message_plot_size_must_be_positive">The plot size must be strictly positive</string>
    <string name="add_miner_message_illegal_uri">Illegal URI: %1$s</string>
    <string name="create_plot_question">Create plot file?</string>
    <string name="create_plot_confirmation_message">Do you really want to create a plot file on this device, for a miner called %1$s, containing %2$d nonces, with a total size of %3$.2f gigabytes?</string>
    <string name="plot_creation_completed">Completed creation of plot for miner %1$s</string>
    <string name="add_miner_public_key_base58_hint">Base58-encoded public key</string>
    <string name="add_miner_message_invalid_public_key">The inserted public key is invalid</string>
    <string name="add_miner_message_public_key_not_base58">The inserted public key is not in Base58 format</string>
    <string name="add_miner_bip39_word">%1$d: %2$s</string>
    <string name="miner_card_balance">balance: %1$s</string>
    <string name="miner_card_last_updated">last updated: %1$s</string>
    <string name="notification_mining_activity">Mining activity</string>
    <string name="notification_tap_to_show">Tap to show</string>
    <string name="notification_pause_mining">Pause mining</string>
    <string name="menu_settings">Settings</string>
    <string name="source_code_uri">Source code: https://github.com/Mokamint-chain/mokaminter</string>
    <string name="license">License: https://www.apache.org/licenses/LICENSE-2.0.txt</string>
    <string name="miners_fragment_menu_pause_mining">Pause mining</string>
    <string name="miners_fragment_menu_unpause_mining">Unpause mining</string>
    <string name="use_existing_key_pair">Use existing key pair</string>
    <string name="insert_words_info">Insert the key pair below, as a mnemonic phrase and password.</string>
    <string name="wrong_bip39_phrase">Wrong BIP39: %1$s</string>
    <string name="default_max_plot_size">1000</string>
    <string name="max_plot_size">Max plot size</string>
    <string name="notification_channel_name">Background mining updates</string>
    <string name="notification_channel_description">Updates about background mining activities</string>
    <string name="settings_plot_size_must_be_a_positive_integer">The plot size must be a positive integer value</string>
    <string name="add_miner_message_plot_size_limited">The max plot size is %1$d; you can change it from the settings page</string>
    <string name="menu_miners">Miners</string>
    <string name="action_turn_on_miner">Turn on</string>
    <string name="action_turn_off_miner">Turn off</string>
    <string name="notification_plot_creation_title">Plot creation</string>
    <string name="notification_plot_creation_description">The creation of the plot file for miner %1$s is in progress</string>
    <string name="notification_mining_active">Mining for blockchain %1$s</string>
    <string name="cannot_contact">Cannot contact %1$s</string>
    <string name="never">never</string>
    <string name="in_the_future">in the future</string>
    <string name="now">now</string>
    <string name="more_than_one_hour_ago">more than one hour ago</string>
    <string name="action_share_miner">Share</string>
</resources>