<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_delete_miner"
        android:orderInCategory="101"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_delete_miner"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_turn_off_miner"
        android:orderInCategory="102"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_turn_off_miner"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_turn_on_miner"
        android:orderInCategory="103"
        android:icon="@drawable/ic_delete"
        android:title="@string/action_turn_on_miner"
        app:showAsAction="never" />

</menu>