<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:backgroundTint="@color/white"
            android:indeterminate="true"
            android:indeterminateTint="@color/purple_700"
            android:max="100"
            app:layout_constraintBottom_toTopOf="@id/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/heading"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/add_miner_heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/progress_bar"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/uri"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:text="@string/added_miner_uri_default"
            android:inputType="textUri"
            android:minHeight="48dp"
            app:layout_constraintTop_toBottomOf="@id/heading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/keypair_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:hint="@string/added_miner_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            app:layout_constraintEnd_toStartOf="@id/hideShowKeyPairPassword"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/words"
            app:layout_constraintVertical_chainStyle="packed" />

        <io.mokamint.android.mokaminter.view.PasswordVisibilityToggle
            android:id="@+id/hideShowKeyPairPassword"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:background="@color/white"
            android:scaleType="centerInside"
            app:controls="@+id/keypair_password"
            app:layout_constraintBottom_toBottomOf="@+id/keypair_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/keypair_password"
            app:layout_constraintTop_toTopOf="@id/keypair_password"
            app:layout_constraintVertical_bias="0.48000002"
            app:srcCompat="@drawable/selector_show_password" />

        <RadioGroup
            android:id="@+id/keypair_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/uri">

            <RadioButton
                android:id="@+id/keypair_create_new"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/keypair_create_new" />

            <RadioButton
                android:id="@+id/keypair_import_existing"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:checked="false"
                android:text="@string/keypair_import_existing" />

        </RadioGroup>

        <Button
            android:id="@+id/add_miner_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:text="@string/add_miner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keypair_password" />

        <TextView
            android:id="@+id/words_warning"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/words_warning"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/keypair_group" />

        <TableLayout
            android:id="@+id/words"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:stretchColumns="*"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/words_warning"
            app:layout_constraintHorizontal_bias="0.5" >

            <TableRow>

                <AutoCompleteTextView
                    android:id="@+id/word1"
                    android:gravity="center"
                    android:hint="@string/word1"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word2"
                    android:gravity="center"
                    android:hint="@string/word2"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word3"
                    android:gravity="center"
                    android:hint="@string/word3"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word4"
                    android:gravity="center"
                    android:hint="@string/word4"
                    android:padding="3dp" />
            </TableRow>

            <TableRow>

                <AutoCompleteTextView
                    android:id="@+id/word5"
                    android:gravity="center"
                    android:hint="@string/word5"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word6"
                    android:gravity="center"
                    android:hint="@string/word6"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word7"
                    android:gravity="center"
                    android:hint="@string/word7"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word8"
                    android:gravity="center"
                    android:hint="@string/word8"
                    android:padding="3dp" />
            </TableRow>

            <TableRow>

                <AutoCompleteTextView
                    android:id="@+id/word9"
                    android:gravity="center"
                    android:hint="@string/word9"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word10"
                    android:gravity="center"
                    android:hint="@string/word10"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word11"
                    android:gravity="center"
                    android:hint="@string/word11"
                    android:padding="3dp" />

                <AutoCompleteTextView
                    android:id="@+id/word12"
                    android:gravity="center"
                    android:hint="@string/word12"
                    android:padding="3dp" />
            </TableRow>

        </TableLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>