<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_reload"
        android:orderInCategory="100"
        android:icon="@drawable/ic_refresh"
        android:title="@string/action_reload_miners"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_pause_mining"
        android:orderInCategory="101"
        android:icon="@drawable/ic_add"
        android:title="@string/miners_fragment_menu_pause_mining"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_unpause_mining"
        android:orderInCategory="102"
        android:icon="@drawable/ic_add"
        android:title="@string/miners_fragment_menu_unpause_mining"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_add_miner"
        android:orderInCategory="103"
        android:icon="@drawable/ic_add"
        android:title="@string/action_add_miner"
        app:showAsAction="never" />

</menu>